# rust-state-transition-sdk

./: Cargo.toml  README.md  STATUS.md
.github/workflows/: ci.yml
examples/: basic_transfer.rs  escrow_swap.rs  mint.rs  token_split.rs  verify_token.rs
src/: error.rs  lib.rs  minter.rs  prelude.rs  sync.rs
src/client/: aggregator.rs  jsonrpc.rs  mod.rs  state_transition.rs
src/crypto/: hash.rs  keys.rs  mod.rs  signing.rs
src/smt/: db.rs  mod.rs  path.rs  sparse_merkle_tree.rs  sum_tree.rs
src/types/: address.rs  bft.rs  commitment.rs  hex_serde.rs  mod.rs  predicate.rs  primitives.rs  token.rs  transaction.rs
tests/: aggregator_integration.rs  debug_certificate.rs  debug_inclusion_proof.rs  debug_raw_response.rs  e2e_test.rs  mint_basic_e2e.rs  mint_transfer_chain_e2e.rs  mint_transfer_e2e.rs  real_e2e_test.rs  security_signature_verification_test.rs  verify_json_structure.rs
tests/integration/: mod.rs
