[package]
name = "unicity-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Unicity Labs"]
description = "Rust SDK for Unicity Protocol state transitions"
repository = "https://github.com/unicitynetwork/rust-state-transition-sdk"
license = "MIT OR Apache-2.0"
keywords = ["unicity", "blockchain", "state-transition", "cryptography"]
categories = ["cryptography", "api-bindings"]

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Cryptography
secp256k1 = { version = "0.31", features = ["recovery", "global-context", "rand"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
ripemd = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
serde_bytes = "0.11"
base64 = "0.22"

# Network
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonrpsee = { version = "0.26", features = ["http-client", "async-client"] }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { version = "1.0", features = ["display", "from"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
criterion = "0.6"
testcontainers = "0.25"
pretty_assertions = "1.4"
rstest = "0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
