[workspace]

[package]
name = "unicity-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Unicity Labs"]
description = "Rust SDK for Unicity Protocol state transitions"
repository = "https://github.com/unicitynetwork/rust-state-transition-sdk"
license = "MIT OR Apache-2.0"
keywords = ["unicity", "blockchain", "state-transition", "cryptography"]
categories = ["cryptography", "api-bindings"]

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
    "hex/std",
    "thiserror",
    "anyhow",
    "tokio",
    "reqwest",
    "jsonrpsee",
    "tracing-subscriber",
    "base64",
    "chrono",
    "futures",
    "rand",
    "k256/std",
]

# no_std build for zkVM guest or WASM targets etc.
zkvm = [
    "serde/alloc",
    "serde_json/alloc",
    "hex/alloc"
]

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"], optional = true }

# Cryptography
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "ecdsa-core", "sha256"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }
ripemd = { version = "0.1", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ciborium = { version = "0.2", default-features = false }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", optional = true }

# Network
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
jsonrpsee = { version = "0.26", features = ["http-client", "async-client"], optional = true }

# Utilities
thiserror = { version = "2.0", optional = true }
anyhow = { version = "1.0", optional = true }
num-bigint = { version = "0.4", default-features = false, features = ["serde"] }
num-traits = { version = "0.2", default-features = false }
chrono = { version = "0.4", features = ["serde"], optional = true }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
derive_more = { version = "1.0", default-features = false, features = ["display", "from"] }
futures = { version = "0.3", optional = true }
indexmap = { version = "2.7", default-features = false, features = ["serde"] }
foldhash = { version = "0.1", default-features = false }
once_cell = { version = "1.19", default-features = false }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
criterion = "0.6"
testcontainers = "0.25"
pretty_assertions = "1.4"
rstest = "0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

